--- a/public/index.html
+++ b/public/index.html
@@ -2,39 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
     <title>duice-example</title>
+    <script src="https://unpkg.com/duice@latest/dist/duice.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/duice@latest/dist/duice.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/duice@latest/dist/duice-theme.css"/>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-<h1>Duice example</h1>
-<h2>
-    Plain example
-</h2>
-<ul>
-    <li>
-        <a href="/plain-example/master-detail/users.html" target="_blank">
+<main>
+    <h1>Duice example</h1>
+    <h2>
+        Plain example
+    </h2>
+    <ul>
+        <li>
             Master Detail Pattern
-        </a>
-    </li>
-</ul>
-<h2>
-    React example
-</h2>
-<ul>
-    <li>
-        <a href="/react-example/master-detail" target="_blank">
-            Master Detail Pattern
-        </a>
-    </li>
-</ul>
-<h2>
-    Vue Example
-</h2>
-<ul>
-    <li>
-        <a href="/vue-example/master-detail" target="_blank">
-            Master Detail Pattern
-        </a>
-    </li>
-</ul>
+            -
+            <a href="/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
+                [Demo]
+            </a>
+            <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
+                [Code]
+            </a>
+        </li>
+        <li>
+            Modal Overlay Pattern
+            -
+            <a href="/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
+                [Demo]
+            </a>
+            <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
+                [Code]
+            </a>
+        </li>
+        <li>
+            Hub and Spoke Pattern
+            -
+            <a href="/plain-example/hub-and-spoke/users.html" target="_blank" class="font-weight--bold">
+                [Demo]
+            </a>
+            <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/hub-and-spoke/" target="_blank" class="font-weight--bold">
+                [Code]
+            </a>
+        </li>
+    </ul>
+    <h2>
+        React example
+    </h2>
+    <ul>
+        <li>
+            <a href="/react-example/master-detail" target="_blank">
+                Master Detail Pattern
+            </a>
+        </li>
+    </ul>
+    <h2>
+        Vue Example
+    </h2>
+    <ul>
+        <li>
+            <a href="/vue-example/master-detail" target="_blank">
+                Master Detail Pattern
+            </a>
+        </li>
+    </ul>
+</main>
 </body>
 </html>
