--- a/public/index.html
+++ b/public/index.html
@@ -21,61 +21,122 @@
 <body>
 <main>
     <h1>Duice example</h1>
-    <h2>
-        Plain example
-    </h2>
-    <ul>
-        <li>
-            Master Detail Pattern
-            -
-            <a href="/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
-                [Demo]
-            </a>
-            <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
-                [Code]
-            </a>
-        </li>
-        <li>
-            Modal Overlay Pattern
-            -
-            <a href="/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
-                [Demo]
-            </a>
-            <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
-                [Code]
-            </a>
-        </li>
-        <li>
-            Hub and Spoke Pattern
-            -
-            <a href="/plain-example/hub-and-spoke/users.html" target="_blank" class="font-weight--bold">
-                [Demo]
-            </a>
-            <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/hub-and-spoke/" target="_blank" class="font-weight--bold">
-                [Code]
-            </a>
-        </li>
-    </ul>
-    <h2>
-        React example
-    </h2>
-    <ul>
-        <li>
-            <a href="/react-example/master-detail" target="_blank">
+    <section>
+        <h2 class="display--flex align-items--center">
+            <img src="/static/image/icon-html5.svg" alt="HTML5" class="height--2em">
+            Plain example
+        </h2>
+        <ul>
+            <li>
                 Master Detail Pattern
-            </a>
-        </li>
-    </ul>
-    <h2>
-        Vue Example
-    </h2>
-    <ul>
-        <li>
-            <a href="/vue-example/master-detail" target="_blank">
+                -
+                <a href="/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
+                    [Demo]
+                </a>
+                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
+                    [Code]
+                </a>
+            </li>
+            <li>
+                Modal Overlay Pattern
+                -
+                <a href="/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
+                    [Demo]
+                </a>
+                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
+                    [Code]
+                </a>
+            </li>
+            <li>
+                Hub and Spoke Pattern
+                -
+                <a href="/plain-example/hub-and-spoke/users.html" target="_blank" class="font-weight--bold">
+                    [Demo]
+                </a>
+                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/hub-and-spoke/" target="_blank" class="font-weight--bold">
+                    [Code]
+                </a>
+            </li>
+        </ul>
+    </section>
+    <hr/>
+    <section>
+        <h2 class="display--flex align-items--center">
+            <img src="/static/image/icon-react.svg" alt="HTML5" class="height--2em">
+            React example
+        </h2>
+        <ul>
+            <li>
                 Master Detail Pattern
-            </a>
-        </li>
-    </ul>
+                -
+                <a href="/react-example/master-detail" target="_blank" class="font-weight--bold">
+                    [Demo]
+                </a>
+                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
+                    [Code]
+                </a>
+            </li>
+            <li>
+                Modal Overlay Pattern
+                -
+                <a href="/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
+                    [Demo]
+                </a>
+                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
+                    [Code]
+                </a>
+            </li>
+            <li>
+                Hub and Spoke Pattern
+                -
+                <a href="/plain-example/hub-and-spoke/users.html" target="_blank" class="font-weight--bold">
+                    [Demo]
+                </a>
+                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/hub-and-spoke/" target="_blank" class="font-weight--bold">
+                    [Code]
+                </a>
+            </li>
+        </ul>
+    </section>
+    <hr/>
+    <section>
+        <h2 class="display--flex align-items--center">
+            <img src="/static/image/icon-vue.svg" alt="HTML5" class="height--2em">
+            Vue Example
+        </h2>
+        <ul>
+            <li>
+                Master Detail Pattern
+                -
+                <a href="/vue-example/master-detail" target="_blank" class="font-weight--bold">
+                    [Demo]
+                </a>
+                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/master-detail/users.html" target="_blank" class="font-weight--bold">
+                    [Code]
+                </a>
+            </li>
+            <li>
+                Modal Overlay Pattern
+                -
+                <a href="/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
+                    [Demo]
+                </a>
+                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/modal-overlay/users.html" target="_blank" class="font-weight--bold">
+                    [Code]
+                </a>
+            </li>
+            <li>
+                Hub and Spoke Pattern
+                -
+                <a href="/plain-example/hub-and-spoke/users.html" target="_blank" class="font-weight--bold">
+                    [Demo]
+                </a>
+                <a href="https://github.com/chomookun/duice-example/tree/main/example/plain-example/hub-and-spoke/" target="_blank" class="font-weight--bold">
+                    [Code]
+                </a>
+            </li>
+        </ul>
+    </section>
 </main>
 </body>
 </html>
